--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,10 @@
   "compilerOptions": {
     "target": "es2021",
     "module": "commonjs",
+    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
-    "outDir": "dist",
     "declaration": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
-  "exclude": ["dist", "node_modules"],
-  "include": ["./src"]
 }
