--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,9 @@
 version: "3.7"
 
 services:
-  automation-node:
-    hostname: automation-node
-    image: node
-    restart: always
-    build:
-      context: .
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "100m"
-    environment:
-      - NODE_PK=${NODE_PK}
-      - RPC=${RPC}
-      - WS_RPC=${WS_RPC}
-      - NETWORK=${NETWORK}
+  api-ninjas-oracle:
+    build: oracle-nodes/api-ninjas
+    ports: ["4000:4000"]
+  coinmarketcap-oracle:
+    build: oracle-nodes/coinmarketcap
+    ports: ["4001:4001"]
