--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "strict": true,
     "esModuleInterop": true,
     "declaration": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
